JT-2315 Correct subject toggle wrapping on mobile

--- a/app/assets/stylesheets/gs/equity.css.scss
+++ b/app/assets/stylesheets/gs/equity.css.scss
@@ -49,6 +49,8 @@
       text-decoration: none;
       background-color: #F0FAFB;
       color: #28292a;
+      white-space: nowrap;
+      overflow: hidden;
 
       &:not(:first-child) {
         margin-left: -1px;
